cabal-version:       2.4
name:                AoC2023
version:             2023.12.4.1
synopsis:            Advent of Code 2023
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             BSD-2-Clause
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game
data-files:          **/*.txt

library
  build-depends:      base ^>= 4.17.2.1
                    , filepath ^>= 1.4.100.0
                    , megaparsec ^>= 9.3.0
                    , mtl ^>= 2.3.1
  other-modules:      Paths_AoC2023
  exposed-modules:    AoC
  hs-source-dirs:     .
  default-language:   Haskell2010

executable Trebuchet
  main-is:            Trebuchet.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 01: Trebuchet?!"
  default-language:   Haskell2010

executable CubeConundrum
  main-is:            CubeConundrum.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 02: Cube Conundrum"
  default-language:   Haskell2010

executable GearRatios
  main-is:            GearRatios.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 03: Gear Ratios"
  default-language:   Haskell2010

executable Scratchcards
  main-is:            Scratchcards.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 04: Scratchcards"
  default-language:   Haskell2010
