cabal-version:       2.4
name:                AoC2023
version:             2023.12.23.2
synopsis:            Advent of Code 2023
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             BSD-2-Clause
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game
data-files:          **/*.txt

library
  build-depends:      base ^>= 4.17.2.1
                    , containers ^>= 0.6.7
                    , filepath ^>= 1.4.100.0
                    , megaparsec ^>= 9.3.0
                    , mtl ^>= 2.3.1
                    , pqueue ^>= 1.5.0.0
  other-modules:      Paths_AoC2023
  exposed-modules:    AoC
  hs-source-dirs:     .
  default-language:   Haskell2010

executable Trebuchet
  main-is:            Trebuchet.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 01: Trebuchet?!"
  default-language:   Haskell2010

executable CubeConundrum
  main-is:            CubeConundrum.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 02: Cube Conundrum"
  default-language:   Haskell2010

executable GearRatios
  main-is:            GearRatios.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 03: Gear Ratios"
  default-language:   Haskell2010

executable Scratchcards
  main-is:            Scratchcards.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 04: Scratchcards"
  default-language:   Haskell2010

executable IfYouGiveASeedAFertilizer
  main-is:            IfYouGiveASeedAFertilizer.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
                    , data-interval ^>= 2.1.1
                    , extended-reals ^>= 0.2.4.0
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 05: If You Give A Seed A Fertilizer"
  default-language:   Haskell2010

executable WaitForIt
  main-is:            WaitForIt.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 06: Wait For It"
  default-language:   Haskell2010

executable CamelCards
  main-is:            CamelCards.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 07: Camel Cards"
  default-language:   Haskell2010

executable HauntedWasteland
  main-is:            HauntedWasteland.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 08: Haunted Wasteland"
  default-language:   Haskell2010

executable MirageMaintenance
  main-is:            MirageMaintenance.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 09: Mirage Maintenance"
  default-language:   Haskell2010

executable PipeMaze
  main-is:            PipeMaze.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 10: Pipe Maze"
  default-language:   Haskell2010

executable CosmicExpansion
  main-is:            CosmicExpansion.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 11: Cosmic Expansion"
  default-language:   Haskell2010

executable HotSprings
  main-is:            HotSprings.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 12: Hot Springs"
  default-language:   Haskell2010

executable PointOfIncidence
  main-is:            PointOfIncidence.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 13: Point of Incidence"
  default-language:   Haskell2010

executable ParabolicReflectorDish
  main-is:            ParabolicReflectorDish.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 14: Parabolic Reflector Dish"
  default-language:   Haskell2010

executable LensLibrary
  main-is:            LensLibrary.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 15: Lens Library"
  default-language:   Haskell2010

executable TheFloorWillBeLava
  main-is:            TheFloorWillBeLava.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 16: The Floor Will Be Lava"
  default-language:   Haskell2010

executable ClumsyCrucible
  main-is:            ClumsyCrucible.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023 ^>= 2023.12.17.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 17: Clumsy Crucible"
  default-language:   Haskell2010

executable LavaductLagoon
  main-is:            LavaductLagoon.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 18: Lavaduct Lagoon"
  default-language:   Haskell2010

executable Aplenty
  main-is:            Aplenty.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
                    , data-interval ^>= 2.1.1
                    , extended-reals ^>= 0.2.4.0
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 19: Aplenty"
  default-language:   Haskell2010

executable PulsePropagation
  main-is:            PulsePropagation.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 20: Pulse Propagation"
  default-language:   Haskell2010

executable StepCounter
  main-is:            StepCounter.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023 ^>= 2023.12.21.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
                    , pqueue ^>= 1.5.0.0
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 21: Step Counter"
  default-language:   Haskell2010

executable SandSlabs
  main-is:            SandSlabs.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023 ^>= 2023.12.21.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
                    , pqueue ^>= 1.5.0.0
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 22: Sand Slabs"
  default-language:   Haskell2010

executable ALongWalk
  main-is:            ALongWalk.hs
  build-depends:      base ^>= 4.17.2.1
                    , AoC2023 ^>= 2023.12.21.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
                    , containers ^>= 0.6.7
                    , pqueue ^>= 1.5.0.0
  other-modules:      Paths_AoC2023
  hs-source-dirs:     "Day 23: A Long Walk"
  default-language:   Haskell2010
