cabal-version:       2.4
name:                AoC2024
version:             2024.12.15.1
synopsis:            Advent of Code 2024
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             EUPL-1.2+
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game
data-files:          **/*.txt

library
  build-depends:      base ^>= 4.20.0.0
                    , containers ^>= 0.7
                    , filepath ^>= 1.5.4.0
                    , megaparsec ^>= 9.7.0
                    , mtl ^>= 2.3.1
                    , pqueue ^>= 1.5.0.0
  other-modules:      Paths_AoC2024
  exposed-modules:    AoC
  hs-source-dirs:     .
  default-language:   Haskell2010

executable HistorianHysteria
  main-is:            HistorianHysteria.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 01: Historian Hysteria"
  default-language:   Haskell2010

executable Red-NosedReports
  main-is:            Red-NosedReports.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 02: Red-Nosed Reports"
  default-language:   Haskell2010

executable MullItOver
  main-is:            MullItOver.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 03: Mull It Over"
  default-language:   Haskell2010

executable CeresSearch
  main-is:            CeresSearch.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 04: Ceres Search"
  default-language:   Haskell2010

executable PrintQueue
  main-is:            PrintQueue.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 05: Print Queue"
  default-language:   Haskell2010

executable GuardGallivant
  main-is:            GuardGallivant.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 06: Guard Gallivant"
  default-language:   Haskell2010

executable BridgeRepair
  main-is:            BridgeRepair.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 07: Bridge Repair"
  default-language:   Haskell2010

executable ResonantCollinearity
  main-is:            ResonantCollinearity.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 08: Resonant Collinearity"
  default-language:   Haskell2010

executable DiskFragmenter
  main-is:            DiskFragmenter.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 09: Disk Fragmenter"
  default-language:   Haskell2010

executable HoofIt
  main-is:            HoofIt.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 10: Hoof It"
  default-language:   Haskell2010

executable PlutonianPebbles
  main-is:            PlutonianPebbles.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 11: Plutonian Pebbles"
  default-language:   Haskell2010

executable GardenGroups
  main-is:            GardenGroups.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers ^>= 0.7
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 12: Garden Groups"
  default-language:   Haskell2010

executable ClawContraption
  main-is:            ClawContraption.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 13: Claw Contraption"
  default-language:   Haskell2010

executable RestroomRedoubt
  main-is:            RestroomRedoubt.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 14: Restroom Redoubt"
  default-language:   Haskell2010

executable WarehouseWoes
  main-is:            WarehouseWoes.hs
  build-depends:      base ^>= 4.20.0.0
                    , AoC2024
                    , criterion ^>= 1.6.4.0
                    , megaparsec ^>= 9.7.0
                    , silently ^>= 1.2.5.4
                    , containers
  other-modules:      Paths_AoC2024
  hs-source-dirs:     "Day 15: Warehouse Woes"
  default-language:   Haskell2010
